crates/main/amethystate/tests/snapshots/error_reports__get_wrong_type_ron.snap
---
source: crates/main/amethystate/tests/error_reports.rs
expression: shape(&err)
---
the store could not read
├╴store: <store>
├╴key: cfg.name
│
├─▶ the value could not be encoded or decoded
│   ╰╴key: cfg.name
│
├─▶ Erased codec error: Expected u32 but found the string "not a number" instead
│
╰─▶ Expected u32 but found the string "not a number" instead
