crates/main/amethystate/tests/snapshots/error_reports__get_wrong_type_toml.snap
---
source: crates/main/amethystate/tests/error_reports.rs
expression: shape(&err)
---
the store could not read
├╴store: <store>
├╴key: cfg.name
│
├─▶ the value could not be encoded or decoded
│   ╰╴key: cfg.name
│
├─▶ Erased codec error: invalid type: string "not a number", expected u32
│
╰─▶ invalid type: string "not a number", expected u32
