crates/main/amethystate/tests/snapshots/error_reports__kv_empty_name.snap
---
source: crates/main/amethystate/tests/error_reports.rs
expression: shape(&err)
---
a name that cannot be a level
├╴name: 
│
╰─▶ level 0 of the path has no name
