crates/main/amethystate/tests/snapshots/error_reports__kv_empty_name_in_namespace.snap
---
source: crates/main/amethystate/tests/error_reports.rs
expression: shape(&err)
---
a name that cannot be a level
├╴namespace: ui, name: 
│
╰─▶ level 1 of the path has no name
