crates/main/amethystate/tests/snapshots/error_reports__kv_over_a_declared_field_in_a_namespace.snap
---
source: crates/main/amethystate/tests/error_reports.rs
expression: err.to_string()
---
panel.width is declared by Panel
