crates/main/amethystate/tests/snapshots/error_reports__kv_over_a_declared_field_names_its_owner.snap
---
source: crates/main/amethystate/tests/error_reports.rs
assertion_line: 227
expression: "shape(&Report::<StorageError>::from(err))"
---
two schemas want the same place
├╴key: panel.width
╰╴Panel claims panel.width
